# logging_files_in_diretory

./: CMakeLists.txt  README.md  main.cpp
